# rules_utp

./: BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  defs.bzl  depprereqs.bzl  maven_install.json  prereqs.bzl
.github/workflows/: ci.bazelrc  ci.yml
example/ait/: BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  defs.bzl  rule.bzl
example/ait/lib/: AndroidManifest.xml  BUILD  SampleActivity.java  SampleAndroidManifest.xml  SampleTest.java
example/ait/lib/res/layout/: sample_activity.xml
example/ait/lib/res/menu/: menu.xml
example/ait/lib/res/values/: strings.xml
launcher/: BUILD  android_instrumentation_driver.bzl  artifact.bzl  entry_point.bzl  environment.bzl  extension.bzl  features.bzl  instrumentation.bzl  launcher.bzl  launcher.sh  local_android_device_provider.bzl  mime_types.bzl  primitives.bzl  release.bzl  rules.bzl  test_fixture.bzl  utilities.bzl
provider/: BUILD  provider.bzl
provider/android/plugin/: BUILD  providers.bzl
provider/errorconfig/: BUILD  providers.bzl  textproto.bzl
provider/extension/: BUILD  providers.bzl  textproto.bzl
test/: BUILD
test/launcher/: BUILD  android_instrumentation_driver_test.bzl  extension_test.bzl  instrumentation_test.bzl  local_android_device_provider_test.bzl
tools/android/: BUILD
tools/jdk/: BUILD
tools/utp/: BUILD  constants.bzl
